Get Past Events and show the transactions

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
 
     <title>Klassy Cafe - Restaurant HTML Template</title>
 
@@ -136,8 +138,10 @@
                     <h2 class="text-uppercase heading border-bottom mb-4">Search</h2>
                     <form id="searchEx">
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" name="EOA" placeholder="EOA계좌를 검색해주세요." aria-label="EOA's name" aria-describedby="button-addon2">
-                            <button class="btn btn-outline-secondary" type="button" id="button-addon2" onclick="searchEOA()">Button</button>
+                            <input type="text" class="form-control" name="EOA" placeholder="EOA계좌를 검색해주세요."
+                                aria-label="EOA's name" aria-describedby="button-addon2">
+                            <button class="btn btn-outline-secondary" type="button" id="button-addon2"
+                                onclick="searchEOA()">Button</button>
                         </div>
                     </form>
                 </div>
@@ -159,10 +163,10 @@
                 </div>
             </div>
         </div>
-        <div class="menu-item-carousel">
+        <!-- <div class="menu-item-carousel">
             <div class="col-lg-12">
-                <div class="owl-menu-item owl-carousel">
-                    <div class="item">
+                <div id="tx-infos" class="owl-menu-item owl-carousel"> -->
+                    <!-- <div class="item">
                         <div class='card card1'>
                             <div class="price">
                                 <h6>$14</h6>
@@ -209,19 +213,20 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="item">
+                    </div> -->
+                    <!-- <div class="item">
                         <div class='card card4'>
                             <div class="price">
                                 <h6>$10</h6>
                             </div>
                             <div class='info'>
                                 <h1 class='title'>Blueberry CheeseCake</h1>
-                                <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.
+                                <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do
+                                    eiusmod teme.
                                 </p>
                                 <div class="main-text-button">
                                     <div class="scroll-to-section"><a href="#reservation">Make Reservation <i
-                        class="fa fa-angle-down"></i></a></div>
+                                                class="fa fa-angle-down"></i></a></div>
                                 </div>
                             </div>
                         </div>
@@ -233,11 +238,12 @@
                             </div>
                             <div class='info'>
                                 <h1 class='title'>Klassy Cup Cake</h1>
-                                <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.
+                                <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do
+                                    eiusmod teme.
                                 </p>
                                 <div class="main-text-button">
                                     <div class="scroll-to-section"><a href="#reservation">Make Reservation <i
-                        class="fa fa-angle-down"></i></a></div>
+                                                class="fa fa-angle-down"></i></a></div>
                                 </div>
                             </div>
                         </div>
@@ -249,17 +255,37 @@
                             </div>
                             <div class='info'>
                                 <h1 class='title'>Klassic Cake</h1>
-                                <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.
+                                <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do
+                                    eiusmod teme.
                                 </p>
                                 <div class="main-text-button">
                                     <div class="scroll-to-section"><a href="#reservation">Make Reservation <i
-                        class="fa fa-angle-down"></i></a></div>
+                                                class="fa fa-angle-down"></i></a></div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
+                    </div> -->
+                <!-- </div>
             </div>
+        </div> -->
+        <div class="menu-item-carousel">
+            <div class="col-lg-12">
+                <div id="tx-infos" class="owl-menu-item owl-carousel owl-theme">
+        <!-- <div id="tx-infos" class="owl-carousel owl-theme"> -->
+            <!-- <div class="item"><h4>1</h4></div>
+            <div class="item"><h4>2</h4></div>
+            <div class="item"><h4>3</h4></div>
+            <div class="item"><h4>4</h4></div>
+            <div class="item"><h4>5</h4></div>
+            <div class="item"><h4>6</h4></div>
+            <div class="item"><h4>7</h4></div>
+            <div class="item"><h4>8</h4></div>
+            <div class="item"><h4>9</h4></div>
+            <div class="item"><h4>10</h4></div>
+            <div class="item"><h4>11</h4></div>
+            <div class="item"><h4>12</h4></div> -->
+              </div>
+           </div>
         </div>
     </section>
     <!-- ***** Menu Area Ends ***** -->
@@ -276,6 +302,38 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-lg-4">
+                    <div class="fundraiser-item">
+                        <div class="thumb">
+                            <div class="overlay"></div>
+                            <ul class="social-icons">
+                                <li><a id="1" class="do-donation" href="#menu"><i class="fa fa-heart"></i></a></li>
+                            </ul>
+                            <img src="images/daeyoung-1.jpg" alt="fundraiser #1">
+                        </div>
+                        <div class="down-content">
+                            <h4>NO.1</h4>
+                            <span>Fundraiser</span>
+                            <span id="1-fundraiser" hidden>0xE57A0dF5D532A0c097069bcae26352816b0E4A69</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="fundraiser-item">
+                        <div class="thumb">
+                            <div class="overlay"></div>
+                            <ul class="social-icons">
+                                <li><a id="1" class="do-donation"><i class="fa fa-heart"></i></a></li>
+                            </ul>
+                            <img src="images/daeyoung-1.jpg" alt="fundraiser #1">
+                        </div>
+                        <div class="down-content">
+                            <h4>NO.1</h4>
+                            <span>Fundraiser</span>
+                            <span id="1-fundraiser" hidden>0xE57A0dF5D532A0c097069bcae26352816b0E4A69</span>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-lg-4">
                     <div class="fundraiser-item">
                         <div class="thumb">
@@ -343,7 +401,8 @@
                                 <div class="phone">
                                     <i class="fa fa-user"></i>
                                     <h4>Developers</h4>
-                                    <span><a href="#">J.K.W</a><br><a href="#">K.M.S</a><br><a href="#">K.D.Y</a><br><a href="#">M.S.I</a></span>
+                                    <span><a href="#">J.K.W</a><br><a href="#">K.M.S</a><br><a href="#">K.D.Y</a><br><a
+                                            href="#">M.S.I</a></span>
                                 </div>
                             </div>
                             <div class="col-lg-6">
@@ -365,28 +424,33 @@
                                 </div>
                                 <div class="col-lg-6 col-sm-12">
                                     <fieldset>
-                                        <input name="name" type="text" id="name" placeholder="Fundraiser Name*" required="">
+                                        <input name="name" type="text" id="name" placeholder="Fundraiser Name*"
+                                            required="">
                                     </fieldset>
                                 </div>
                                 <div class="col-lg-6 col-sm-12">
                                     <fieldset>
-                                        <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="Orgnaization Email Address" required="">
+                                        <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*"
+                                            placeholder="Orgnaization Email Address" required="">
                                     </fieldset>
                                 </div>
                                 <div class="col-lg-6 col-sm-12">
                                     <fieldset>
-                                        <input name="phone" type="text" id="phone" placeholder="Phone Number*" required="">
+                                        <input name="phone" type="text" id="phone" placeholder="Phone Number*"
+                                            required="">
                                     </fieldset>
                                 </div>
                                 <div class="col-md-6 col-sm-12">
                                     <fieldset>
-                                        <input name="target-amount" type="number" id="target-amount" placeholder="Target Amount(ether)*" required="">
+                                        <input name="target-amount" type="number" id="target-amount"
+                                            placeholder="Target Amount(ether)*" required="">
                                     </fieldset>
                                 </div>
                                 <div class="col-lg-6">
                                     <div id="filterDate2">
                                         <div class="input-group date" data-date-format="dd/mm/yyyy">
-                                            <input name="date" id="date" type="text" class="form-control" placeholder="dd/mm/yyyy">
+                                            <input name="date" id="date" type="text" class="form-control"
+                                                placeholder="dd/mm/yyyy">
                                             <div class="input-group-addon">
                                                 <span class="glyphicon glyphicon-th"></span>
                                             </div>
@@ -401,12 +465,14 @@
                                             <option name="Children" id="Children">Children</option>
                                             <option name="Nature" id="Nature">Nature</option>
                                             <option name="Elders" id="Elders">Elders</option>
-                                            </select>
+                                        </select>
                                     </fieldset>
                                 </div>
                                 <div class="col-lg-12">
                                     <fieldset>
-                                        <textarea name="message" rows="6" id="message" placeholder="Message, Please give us the detail infos" required=""></textarea>
+                                        <textarea name="message" rows="6" id="message"
+                                            placeholder="Message, Please give us the detail infos"
+                                            required=""></textarea>
                                     </fieldset>
                                 </div>
                                 <div class="col-lg-12">
@@ -754,18 +820,20 @@
     <script src="js/plugin/lightbox.js"></script>
     <script src="js/plugin/isotope.js"></script>
     <!-- <script src="js/plugin/web3.min.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.6/web3.min.js" integrity="sha512-jMEcX0Bev3VsCrACqEM3BFZvAMFXJSuTsMu0SttkAdMjquip6p3Oty5bbXrfg4T8n4g5BQYkGKxzLsrSqQgLUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.6/web3.min.js"
+        integrity="sha512-jMEcX0Bev3VsCrACqEM3BFZvAMFXJSuTsMu0SttkAdMjquip6p3Oty5bbXrfg4T8n4g5BQYkGKxzLsrSqQgLUQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Global Init -->
     <script src="js/custom.js"></script>
     <script>
-        $(function() {
+        $(function () {
             var selectedClass = "";
-            $("p").click(function() {
+            $("p").click(function () {
                 selectedClass = $(this).attr("data-rel");
                 $("#portfolio").fadeTo(50, 0.1);
                 $("#portfolio div").not("." + selectedClass).fadeOut();
-                setTimeout(function() {
+                setTimeout(function () {
                     $("." + selectedClass).fadeIn();
                     $("#portfolio").fadeTo(50, 1);
                 }, 500);
@@ -773,7 +841,7 @@
             });
         });
     </script>
-    <script src="js/app.js"></script>
+    <script async src="js/app.js"></script>
     <!-- <script>
     $.get("http://213.0.113.1:8888/api/test", function (data) {
       $("#test").html(data);
@@ -784,7 +852,7 @@
         console.log($(".test1").length);
         // for(var i = 0 ; i < $(".test1").length; i++){
         // }
-        $(".test1").on('click', function() {
+        $(".test1").on('click', function () {
             alert(123);
         })
     </script>
