Update for the Complete

--- a/src/index.html
+++ b/src/index.html
@@ -199,8 +199,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4">
+            <div id="fundraisers-card" class="row">
+                <!-- <div class="col-lg-4">
                     <div class="fundraiser-item">
                         <div class="thumb">
                             <div class="overlay"></div>
@@ -247,7 +247,7 @@
                             <span id="3-fundraiser" hidden>0x57241EF5d0793cDB31895220F23D8a490178227A</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
